results/SpecGenBench/2-shot/log-UniqueChar-2023_11_06_15_09_26.txt
import java.util.HashMap;
import java.util.Map;

class UniqueChar {
    //@ requires s != null;
    //@ ensures \result >= -1 && \result < s.length();
    public int firstUniqChar(String s) {
        Map<Character, Integer> frequency = new HashMap<Character, Integer>();
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) >= 0);
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) <= i);
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) == (\old(frequency.get(k)) + (k == ch ? 1 : 0)));
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            char ch = s.charAt(i);
            frequency.put(ch, frequency.getOrDefault(ch, 0) + 1);
        }
        //@ maintaining \forall int j; 0 <= j && j < i; frequency.get(s.charAt(j)) != 1;
        //@ decreases s.length() - i;
        for (int i = 0; i < s.length(); ++i) {
            if (frequency.get(s.charAt(i)) == 1) {
                return i;
            }
        }
        return -1;
    }
}
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:11: error: cannot find symbol
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) == (\old(frequency.get(k)) + (k == ch ? 1 : 0)));
                                                                                                          ^
  symbol:   variable k
  location: class UniqueChar
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:11: error: cannot find symbol
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) == (\old(frequency.get(k)) + (k == ch ? 1 : 0)));
                                                                                            ^
  symbol:   variable frequency
  location: class UniqueChar
/home/max/Documents/JMLGPT/tmp/UniqueChar.java:11: error: cannot find symbol
        //@ maintaining frequency.keySet().stream().allMatch(k -> frequency.get(k) == (\old(frequency.get(k)) + (k == ch ? 1 : 0)));
                                                                                                                      ^
  symbol:   variable ch
  location: class UniqueChar
3 errors

